# devfolio-support-bot

./: .gitignore  DEVELOPMENT_GUIDE.md  README.md  SETUP_GUIDE.md  analyze_chunks.py  check_dependencies.py  command_responses.py  commands.py  create_database.py  create_docs_database.py  discord_bot_rag.py  multi_query_rag.py  promt.txt  pyproject.toml  query_data.py  query_docs.py  requirements.txt  runner.sh  setup.sh  telegram_bot_basic.py  telegram_bot_group_friendly.py  telegram_bot_rag.py  webhook_logger.py
data/docs/: meta.json
data/docs/guide/: apply-with-devfolio-integration.mdx  creating-and-managing-your-account.mdx  cryptocheer.mdx  faqs-for-hackers.mdx  faqs-for-organizers.mdx  fun.mdx  index.mdx  introduction.mdx  judging.mdx  keyboard-accessibility.mdx  leaderboard.mdx  linking-your-ethereum-wallet.mdx  mdx-components.tsx  meta.json  modes.mdx  my-devfolio.mdx  offline-judging.mdx  onchain-credentials.mdx  online-judging.mdx  organizer-judging.mdx  quadratic-voting.mdx  set-up-your-first-hackathon-on-devfolio.mdx  setting-up-a-hackathon-for-business.mdx  setting-up-a-hackathon-for-universities.mdx  settings.mdx  sponsor-judging.mdx  start-your-devfolio-hacker-experience-here.mdx  why-devfolio.mdx  your-dev-profile.mdx
data/docs/guide/Projects/: adding-managing-projects.mdx  index.mdx  inspire-me.mdx  meta.json  report-a-project.mdx  view-submissions.mdx
data/docs/guide/organizer-dashboard/: admin-tab.mdx  emails-tab.mdx  index.mdx  meta.json  overview-tab.mdx  review-tab.mdx  team-tab.mdx  update-tab.mdx
(+45 files in other folders)
