[project]
name = "devfolio-support-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.20",
    "discord-py>=2.6.0",
    "langchain>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "openai>=1.100.2",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "tiktoken>=0.11.0",
    "unstructured>=0.18.13",
]
